--- a/frontend-service/containerconfig/localhost.conf
+++ b/frontend-service/containerconfig/localhost.conf
@@ -6,17 +6,17 @@ req_extensions     = req_ext
 x509_extensions    = v3_ca
 
 [req_distinguished_name]
-countryName                 = Country Name (2 letter code)
-countryName_default         = US
-stateOrProvinceName         = State or Province Name (full name)
-stateOrProvinceName_default = New York
-localityName                = Locality Name (eg, city)
-localityName_default        = Rochester
-organizationName            = Organization Name (eg, company)
-organizationName_default    = localhost
-organizationalUnitName      = organizationalunit
-organizationalUnitName_default = Development
-commonName                  = Common Name (e.g. server FQDN or YOUR name)
+countryName                 = NL
+countryName_default         = NL
+stateOrProvinceName         = UT
+stateOrProvinceName_default = UT
+localityName                = Utrecht
+localityName_default        = Utrecht
+organizationName            = ACME
+organizationName_default    = ACME
+organizationalUnitName      = ACME-DEVELOPMENT
+organizationalUnitName_default = ACME-DEVELOPMENT
+commonName                  = localhost
 commonName_default          = localhost
 commonName_max              = 64
 
