--- a/frontend-service/Dockerfile
+++ b/frontend-service/Dockerfile
@@ -7,6 +7,7 @@ RUN yum -y install nginx && \
     #openssl req -x509 -nodes -days 365 -newkey rsa:2048 -keyout localhost.key -out localhost.crt -config /tmp/localhost.conf && \
     openssl req -x509 -nodes -days 365 -newkey rsa:2048 -keyout localhost.key -out localhost.crt -subj "/C=NL/ST=Utrecht/L=Utrecht/O=Dis/CN=localhost" && \
     cp localhost.crt /etc/ssl/certs/localhost.crt && \
+    mkdir /etc/ssl/private
     cp localhost.key /etc/ssl/private/localhost.key
     
 EXPOSE 80 443
